Refactor safeSize calculation using Math.clamp (#2184)